# byyl_course_design

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  TEST_REPORT.md
.trae/documents/: Qt 词法分析生成器实现计划（RE→NFA→DFA→MinDFA 与代码生成）.md  修复多字符正则解析与添加命令行一致性测试（Qt Test）.md  新增多语言正则测试集、文件加载入口与架构文档完善计划.md  硬编码消除与可配置化改造方案.md  词法分析生成器（Qt+CMake）实施计划.md  集成 TINY 样例目录与组合扫描器编译运行.md
app/: mainwindow.cpp  mainwindow.h
app/components/ImagePreviewDialog/: ImagePreviewDialog.cpp  ImagePreviewDialog.h
app/components/SettingsDialog/: SettingsDialog.cpp  SettingsDialog.h
app/components/ToastManager/: ToastManager.cpp  ToastManager.h
app/components/ToastWidget/: ToastWidget.cpp  ToastWidget.h
app/controllers/: SyntaxController.cpp  SyntaxController.h
app/controllers/AutomataController/: AutomataController.cpp  AutomataController.h
app/controllers/CodeViewController/: CodeViewController.cpp  CodeViewController.h
app/controllers/GeneratorController/: GeneratorController.cpp  GeneratorController.h
app/controllers/RegexController/: RegexController.cpp  RegexController.h
app/controllers/SettingsController/: SettingsController.cpp  SettingsController.h
app/controllers/SyntaxController/: LR1Controller.cpp  LR1Controller.h  SyntaxController.cpp  SyntaxController.h
app/controllers/TestValidationController/: TestValidationController.cpp  TestValidationController.h
app/experiments/exp1/helpers/: AutomataTableHelper.cpp  AutomataTableHelper.h
app/experiments/exp2/dialogs/: LR0TableDialog.cpp  LR1TableDialog.cpp
app/experiments/exp2/helpers/: SyntaxTableHelper.cpp  SyntaxTableHelper.h
app/experiments/exp2/tabs/: FirstFollowTab.cpp  FirstFollowTab.h  GrammarEditorTab.cpp  GrammarEditorTab.h  SyntaxCodeViewTab.cpp  SyntaxCodeViewTab.h  SyntaxTreeTab.cpp  SyntaxTreeTab.h
app/pages/exp1/: Exp1Page.cpp  Exp1Page.h
app/pages/exp2/: Exp2Page.cpp  Exp2Page.h
app/pages/home/: HomePage.cpp  HomePage.h
app/services/: NotificationService.cpp
app/services/DotService/: DotService.cpp  DotService.h
app/services/FileService/: FileService.cpp  FileService.h
app/services/NotificationService/: NotificationService.cpp  NotificationService.h
app/ui/: SettingsDialog.cpp  ToastManager.cpp  ToastManager.h  ToastWidget.cpp  ToastWidget.h
build-macos/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  CliRegexTest  GuiTest  build.ninja  cmake_install.cmake
build-macos/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-macos/CliRegexTest_autogen/: deps  moc_predefs.h
build-macos/CliRegexTest_autogen/include/: cli_regex_test.moc  cli_regex_test.moc.d
build-macos/GuiTest_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-macos/GuiTest_autogen/6XFVXPSJBP/: moc_mainwindow.cpp.d
build-macos/GuiTest_autogen/include/: auto_test_ui.moc  auto_test_ui.moc.d
build-macos/Testing/Temporary/: CTestCostData.txt
build-macos/byyl.app/Contents/: Info.plist
build-macos/byyl.app/Contents/MacOS/: byyl
build-macos/byyl_autogen/: deps
build-macos/byyl_autogen/6XFVXPSJBP/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
byyl_course_design_1/: mainwindow.cpp  mainwindow.h
docs/: Tests.md
docs/exp_docs/: index.md  流程图绘制总结.md
docs/exp_docs/exp1/: 01_正则解析与预处理.md  02_AST 构建（RegexParser）.md  03_Thompson 方法转 NFA.md  04_子集构造算法（NFA→DFA）.md  05_Hopcroft 最小化算法（DFA→MinDFA）.md  06_状态表生成（Engine）.md  07_组合扫描与编码输出（Engine.runMultiple）.md  07_词法代码生成（CodeGenerator）.md  09_组合扫描与编码输出（Engine.runMultiple）.md
docs/exp_docs/exp1/pic/: 03_Thompson_构造流程图.drawio  03_Thompson_算法流程.drawio
docs/exp_docs/exp2/: 01_BNF 文法输入与解析（GrammarParser）.md  02_FIRST 与 FOLLOW 计算（LL1）.md  03_LR(0) 项集 DFA 构造与预览（LR0Builder）.md  04_SLR(1) 判定与原因呈现（SLR）.md  05_LR(1) 项集 DFA 构造与预览（LR1Builder）.md  06_LR(1) 解析表构造与查看.md  07_LR(1) 语法分析过程（逐步表格）.md  08_语法树生成与预览.md
docs/exp_docs/exp2/pic/: 01_BNF_解析流程.drawio  02_LL1_FIRST_FOLLOW_与预测表.drawio  03_LR0_DFA_构造流程.drawio  04_SLR1_判定流程.drawio  05_LR1_DFA_构造流程.drawio  06_LR1_ActionGoto_构造流程.drawio  (+2 more)
resources/: sample.tny  tiny.regex
src/: Engine.cpp  Engine.h
src/automata/: Hopcroft.cpp  Hopcroft.h  SubsetConstruction.cpp  SubsetConstruction.h  Thompson.cpp  Thompson.h
src/config/: Config.cpp  Config.h
src/core/: Engine.cpp  Engine.h
src/core/automata/: Hopcroft.cpp  Hopcroft.h  SubsetConstruction.cpp  Thompson.cpp  Thompson.h
src/core/generator/: CodeGenerator.cpp  CodeGenerator.h
src/core/model/: Automata.h
src/core/regex/: RegexLexer.cpp  RegexLexer.h  RegexParser.cpp  RegexParser.h
src/generator/: CodeGenerator.cpp  CodeGenerator.h  SyntaxCodeGenerator.cpp  SyntaxCodeGenerator.h
src/model/: Alphabet.h  Automata.h
src/regex/: RegexLexer.cpp  RegexLexer.h  RegexParser.cpp  RegexParser.h
src/syntax/: AST.h  DotGenerator.cpp  DotGenerator.h  Grammar.cpp  Grammar.h  GrammarParser.cpp  GrammarParser.h  LL1.cpp  LL1.h  LR0.cpp  LR0.h  LR1.cpp  LR1Parser.cpp  LR1Parser.h  SyntaxParser.cpp  SyntaxParser.h  TokenMapBuilder.cpp  TokenMapBuilder.h
src/visual/: DotExporter.cpp  DotExporter.h
tests/: README.md  Tests.md  auto_test_ui.cpp  cli_regex_test.cpp  codegen_compile_run_test.cpp  config_weight_test.cpp  gen_dir_config_test.cpp  test_output.txt
tests/automata/: dot_export_test.cpp  dot_export_test.h  fa_core_test.cpp
tests/cli/: cli_regex_test.cpp  cli_regex_test.h
tests/codegen/: codegen_compile_run_test.cpp  codegen_compile_run_test.h
tests/common/: EnvGuard.h  TestIO.h
tests/config/: config_gui_persist_test.cpp  config_gui_persist_test.h  config_weight_test.cpp  config_weight_test.h  gen_dir_config_test.cpp  gen_dir_config_test.h
tests/lexer/: longest_match_test.cpp
tests/regex/: javascript.regex  python.regex  tiny.regex
tests/sample/javascript/: js1.js  js2.js
tests/sample/python/: py1.py  py2.py
tests/syntax/: grammar_parser_test.cpp  ll1_test.cpp  lr1_semantic_ast_build_test.cpp  semantic_actions_parse_test.cpp  syntax_parser_test.cpp  tiny_lr1_flow_test.cpp
tests/test_data/regex/: cpp.regex  go.regex
tests/test_data/semantic/: tiny.txt
tests/test_data/syntax/: tiny_grammar.txt
tests/ui/: auto_test_ui.cpp
(+36 files in other folders)
